# DepDetect

./: .coveragerc  .gitignore  AGENTS.md  README.md  pyproject.toml  ruff.toml  sitecustomize.py
.github/workflows/: python-ci.yml
src/depdetect/: __main__.py  cli.py
src/depdetect/scanner/: __init__.py  errors.py  folder_scanner.py  linguist.py
src/depdetect/scanner/constant/: __init__.py  constant.py
tests/: test_cli.py  test_linguist.py  test_scanner.py
tests/sample/artifact_nupkg/: sample.nupkg
tests/sample/mixed_language/: package.json  pyproject.toml
tests/sample/negative/: README.txt
tests/sample/node_bun/: bun.lockb
tests/sample/node_nx/: nx.json
tests/sample/python_environment_yml/: environment.yml
tests/sample/script_groovy/: sample.groovy
tests/sample/script_jsx/: sample.jsx
tests/sample/script_kt/: sample.kt
tests/sample/script_scala/: Sample.scala
tests/sample/script_tsx/: sample.tsx
